# coyodex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  METHOD.md  Makefile  README.md  SECURITY.md  method.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  idea.yml
docs/: change-impact.md  design-notes.md  grouping-proposal.md  schema-v1.md
eval/: README.md  SKILL.md  method.md  rubric.md  thresholds.json
eval/tests/: test_compare.py  test_judge.py  test_model_pipeline.py  test_profile.py  test_run.py
eval/tools/coyodex_eval/: __init__.py  cli.py  compare.py  judge.py  profile.py  run.py
internal/docs/: design-notes.md  grouping-proposal.md  single-map-drilldown-proposal.md
method/: change-impact.md  coyodex-eval.md  diagrams.md  dispatch.md  domain-cards.md  model.md  project-map.schema.json  schema-v1.md
method/eval/: rubric.md  thresholds.json
method/templates/: project-map.template.md
scripts/: validate_analysis.py
skill/coyodex/: SKILL.md
skill/coyodex-eval/: SKILL.md
templates/: CODEBASE_ANALYSIS.template.md
tests/: test_anchor_drift.py  test_anchors.py  test_assemble.py  test_audit.py  test_balance.py  test_cli.py  test_compare.py  test_convert_and_views.py  test_diff_serve.py  test_diffmap.py  test_dump.py  test_filetree.py  test_fix.py  test_gen_deployment.py  test_grammar_roles.py  test_granularity.py  test_grouping.py  test_impact.py  test_impact_ripple.py  test_impact_serve.py  test_json_schema.py  test_judge.py  test_lint_fragment.py  test_model.py  test_preindex.py  test_profile.py  test_retired_parser.py  test_run.py  test_serve.py  test_serve_fresh.py  test_validate_model.py
tests/fixtures/: mcpolis-project-map.json  mcpolis-project-map.md
tools/: map_backup.py  preindex.py  preindex_lib.py  requirements.txt  schema_v1.py  validate_analysis.py
tools/coyodex/: __init__.py  anchor_drift.py  anchors.py  assemble.py  audit_analysis.py  audit_model.py  balance.py  balance_lib.py  cli.py  convert_md.py  dump.py  fix.py  grammar.py  impact_git.py  impact_lib.py  impact_ripple.py  json_schema.py  lint_fragment.py  model.py  preindex.py  preindex_lib.py  pysrc.py  reconcile.py  schema_v1.py  validate_analysis.py  validate_model.py  views.py
tools/coyodex/eval/: README.md  __init__.py  cli.py  compare.py  judge.py  profile.py  run.py
tools/coyodex/viewer/: README.md  __init__.py  build_graph.py  diffmap.py  filetree.py  gen_viewer.py  info-pane.md  recents.py  render.py  serve.py  viewer.css  viewer.html  viewer.js
tools/eval/: SKILL.md  method.md
tools/tests/: test_grouping.py  test_preindex.py
tools/viewer/: README.md  build_graph.py  gen_viewer.py  render.py  viewer.css  viewer.js
